test/classes/deitz/nested/test_nested2.good
test_nested2.chpl:4: In method 'bar':
test_nested2.chpl:5: error: illegal use of identifier 'd' from enclosing type
test_nested2.chpl:2: note: the identifier is used within class 'D', declared here
test_nested2.chpl:1: note: however, the identifier refers to a field of an enclosing class 'C', declared here
test_nested2.chpl:8: note: field declared here
